# public-test

./: .gitignore  123.txt  CHANGELOG.md  Dockerfile  MODULE.bazel  Package.swift  datetime.txt  dprint.json  magefile.go  manifest.json  merge-conflict-fixture.txt  package.json  report.txt  settings.gradle  test-commit-file-main.txt  test-json.sh  test-pull-request.txt  test.md  test.xml
.bcr/: metadata.template.json  presubmit.yml  source.template.json
.github/: .trigger-conventional-commit-checker-action  .trigger-github-action-required-labels  .trigger-jira-link-commenter  .trigger-pr-conventional-commits  .trigger-task-completed-checker-action  .trigger-ticket-link-appender  labeler.yml  problem-matcher.json  release-drafter.yml  settings.yml  sync.yml
.github/workflows/: abc.yml  act10ns-slack.yml  action-actionlint.yml  action-add-labels.yml  action-android-lint.yml  action-ansible-playbook.yml  action-branch-name.yml  action-codespell.yml  action-cond.yml  action-create-branch.yml  action-create-tag.yml  action-discord.yml  action-download-artifact.yml  action-get-latest-tag.yml  action-gh-release.yml  (+445 more)
.moon/: workspace.yml
demo/: moon.yml
detections/: sample-detection.sql  sample-detection.yml
gradle-project/: build.gradle
myRpackage/: DESCRIPTION  NAMESPACE
quarto/: _quarto.yml  project.qmd
src/: sum.test.js
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
terraform/: main.tf
test-eval/: package.json
test-likec4/: test.c4
test-rubocop/: sample.rb
wrangler-action-test/: index.js  package.json  wrangler.toml
(+29 files in other folders)
